--- a/src/components.less
+++ b/src/components.less
@@ -39,7 +39,7 @@ h1 * {
     text-align: center;
 
     @media (max-width: 750px) {
-        text-align: left;
+        text-align: center !important;
     }
 }
 
@@ -60,7 +60,7 @@ h3 {
 
 
     @media (max-width: 750px) {
-        text-align: left;
+        text-align: center !important;
     }
 }
 
