--- a/src/sections/metrics.less
+++ b/src/sections/metrics.less
@@ -9,12 +9,12 @@
         margin-top: 50px;
         display: flex;
         justify-content: center;
-        gap: 50px 100px;
+        gap: 50px 80px;
         flex-wrap: wrap;
 
 
         @media (max-width: 750px) {
-            justify-content: left;
+            justify-content: center;
         }
     }
 
