--- a/src/sections/stonks.less
+++ b/src/sections/stonks.less
@@ -18,6 +18,10 @@
 
         a {
             margin-top: 40px;
+
+            @media (max-width: 750px) {
+                margin: 40px auto 0;
+            }
         }
     }
 
